refactor: make source code java 8 compatible